# ChangeLog for dev-java/batik
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/batik/ChangeLog,v 1.18 2005/01/29 21:25:13 luckyduck Exp $

*batik-1.5.1-r3 (29 Jan 2005)

  29 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> -batik-1.5.1-r2.ebuild,
  +batik-1.5.1-r3.ebuild:
  updated (R)DEPEND to reflect rhino SLOT changes.

  03 Nov 2004; Thomas Matthijs <axxo@gentoo.org> batik-1.5.1-r2.ebuild,
  batik-1.5.1.ebuild:
  depend on app-arch/unzip

*batik-1.5.1-r2 (26 Oct 2004)

  26 Oct 2004; Thomas Matthijs <axxo@gentoo.org> -batik-1.5.1-r1.ebuild,
  +batik-1.5.1-r2.ebuild:
  add wrapper script #68147

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> batik-1.5.1-r1.ebuild,
  batik-1.5.1.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

*batik-1.5.1-r1 (19 Sep 2004)

  19 Sep 2004; Thomas Matthijs <axxo@gentoo.org> +batik-1.5.1-r1.ebuild:
  no longer uses packed jars

  13 Aug 2004; Chris Aniszczyk <zx@gentoo.org> -batik-1.5.ebuild:
  Clean up

*batik-1.5.1 (13 Aug 2004)

  13 Aug 2004; Chris Aniszczyk <zx@gentoo.org> +batik-1.5.1.ebuild:
  Version bump

  27 Jun 2004; Chris Aniszczyk <zx@gentoo.org> batik-1.5.ebuild:
  Marking stable on ppc

  18 Apr 2004; Chris Aniszczyk <zx@gentoo.org> batik-1.5.ebuild:
  Removing jikes from USE, jikes failed to build batik properly. Closes #47661

  05 Apr 2004; Chris Aniszczyk <zx@gentoo.org> batik-1.1.1.ebuild:
  Clean up.

  15 Feb 2004; Chris Aniszczyk <zx@gentoo.org> batik-1.5.ebuild:
  Minor fix.

  15 Feb 2004; Chris Aniszczyk <zx@gentoo.org> batik-1.5.ebuild:
  Fixed Bug #29045

*batik-1.5 (15 Feb 2004)

  15 Feb 2004; Chris Aniszczyk <zx@gentoo.org> batik-1.5.ebuild:
  Version Bump + Misc Fixes. Bug #30308

*batik-1.1.1 (27 Apr 2003)

  27 Apr 2003; Todd Berman <tberman@gentoo.org> batik-1.1.1.ebuild:
  Fixed up some small issues, and using ant jars instead of ant dist-tgz
