@@ -1,6 +1,6 @@
-MD5 4575891992efe6a44792b9f733f83ccc batik-1.5.1-r3.ebuild 1410
+MD5 ef995a113c15163bc4db93eaedc0c1d4 batik-1.5.1-r3.ebuild 1718
 MD5 914f1ad23f39cbaa68716d2557b2c956 batik-1.5.1.ebuild 1050
-MD5 1f0dc15e5b86ae9bd1c1ec53cc2a5deb ChangeLog 2061
+MD5 aa3b019ddd838c5f96eff9be5e78c104 ChangeLog 2184
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 MD5 2773f6aa10bcb901bd07ea509571ccef files/digest-batik-1.5.1 66
 MD5 2773f6aa10bcb901bd07ea509571ccef files/digest-batik-1.5.1-r3 66
